--- a/src/sections/Nav/nav.css
+++ b/src/sections/Nav/nav.css
@@ -54,7 +54,7 @@
         font-weight: bold;
         z-index: 1;
         position: fixed;
-        top: 64px;
+        top: 54px;
         left: 0;
         right: 0;
     }
